--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,66 +67,50 @@ p {
   margin: auto;
 }
 
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-nav img {
-  width: 4rem;
-
-}
-
-.humo--logo {
-  width: 12rem;
-}
-
-.shop__container {
+.filter__container {
   width: 100%;
   margin: auto;
-  background: black;
-  height: 40rem;
 }
 
-.navigation__content {
-  display: none;
-  position: absolute;
-  top: 12rem;
-  left: 0;
+.search__container {
   width: 100%;
-  background-color: white;
-  padding-bottom: var(--padding--top--mobile);
-
+  margin: auto;
 }
 
-.navigation__content li,a {
-  font-size: var(--font--a--size);
-  text-decoration: none;
-  color: black;
+.search {
+  width: 100%;
+  background-color: var(--secondary--color);
+  border: none;
+  padding: 1.6rem;
+  border-radius: .3rem;
+}
+
+.search::placeholder {
+  padding-right: 2rem;
+}
+
+.search [type=text] {
+  padding-left: 2rem;
+}
+
+.filter__select {
   padding-top: 1rem;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.navigation__main {
-  width: 80%;
-  margin: auto;
+.filter__input {
+  width: 16rem;
+  background-color: white;
+  border: 1px solid var(--secondary--color);
+  padding: 1.6rem;
+}
+
+.shop__container{
+  width: 100%;
+  height: 20rem;
   padding-top: var(--padding--top--mobile);
 
-}
-
-.navigation__main li {
-  border-bottom: 2px dotted var(--border--color);
-  padding-bottom: 1rem;
-}
-
-.navigation__second {
-  width: 80%;
-  margin: auto;
-  padding-top: var(--padding--top--mobile);
-
-}
-
-.navigation__second li:last-child {
-  border-bottom: 2px dotted var(--border--color);
-  padding-bottom: 1rem;
 }
