--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,22 +43,24 @@ html, body {
 }
 */
 h1 {
-
+  font-size: var(--font--h1--size);
 }
 
 h2 {
-
+  font-size: var(--font--h2--size);
 }
 
 a,li {
   font-family: sans-serif;
+  font-size: var(--font--a--size);
 }
 
 p {
-
+  font-size: var(--font--p--size);
+  line-height: 1.6rem;
 }
 
-.text--color__red a{
+.text--color__red a {
   color: var(--main--color);
 }
 
@@ -108,9 +110,37 @@ p {
   padding: 1.6rem;
 }
 
-.shop__container{
+.shop__container {
+  width: 100%;
+  padding-top: var(--padding--top--mobile);
+  padding-bottom: var(--padding--top--mobile);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: var(--grid--gap--mobile);
+
+
+}
+
+.product__card {
+  width: 100%;
+  height: 30rem;
+  border-bottom: 2px dotted var(--border--color);
+}
+
+.product__image {
   width: 100%;
   height: 20rem;
-  padding-top: var(--padding--top--mobile);
+  background-color: var(--secondary--color);
+  border-radius: var(--border--radius);
+}
 
+.product__info {
+  width: 90%;
+  text-align: center;
+}
+
+.product__info h2:first-child {
+  padding-top: var(--padding--top--text);
+  padding-bottom: var(--padding--bottom--text);
 }
