--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -1,9 +1,21 @@
 :root {
+  /* COLORS */
   --main--color: #ee090c;
   --secondary--color: #f8f8f4;
-  --border--color: rgba(70, 70, 70, .3);
+  --border--color: rgba(70, 70, 70, .2);
   --text--color: black;
+  /* FONT SIZE */
+  --font--h1--size: 2rem;
+  --font--h2--size: 1.6rem;
+  --font--h3--size: 1.4rem;
   --font--a--size: 1.8rem;
+  --font--p--size: 1.4rem;
+  /* PADDING */
   --padding--top--mobile: 3rem;
+  --padding--top--text: 1.5rem;
+  --padding--bottom--text: 1rem;
+  --grid--gap--mobile: 1.5rem;
+  /* BORDER RADIUS */
+  --border--radius: .3rem;
 
 }
